# mineral-market-tracker

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.claude/commands/: session-log.md  session-start.md
.github/workflows/: daily.yml
config/: sellers.yaml  sources.yaml  stones.yaml
data/listings/date=2026-07-10/: listings.parquet
data/listings/date=2026-07-11/: listings.parquet
data/listings/date=2026-07-12/: listings.parquet
data/listings/date=2026-07-13/: listings.parquet
data/listings/date=2026-07-14/: listings.parquet
data/listings/date=2026-07-15/: listings.parquet
data/listings/date=2026-07-16/: listings.parquet
data/listings/date=2026-07-17/: listings.parquet
data/listings/date=2026-07-18/: listings.parquet
data/listings/date=2026-07-19/: listings.parquet
data/listings/date=2026-07-20/: listings.parquet
data/listings/date=2026-07-21/: listings.parquet
plans/: 001-category-collection-and-classification.md  002-sold-based-baseline.md
reports/: latest.html  report_2026-07-10.html  report_2026-07-11.html  report_2026-07-12.html  report_2026-07-13.html  report_2026-07-14.html  report_2026-07-15.html  report_2026-07-16.html  report_2026-07-17.html  report_2026-07-18.html  report_2026-07-19.html  report_2026-07-20.html  report_2026-07-21.html  report_2026-07-22.html  report_2026-07-23.html
scripts/: query.py  run_daily.py  vet_sellers.py
session_log/: 2026-07-10_17-56.md
src/mineral_tracker/: analytics.py  config.py  models.py  normalize.py  quality.py  report.py  storage.py
tests/: test_pipeline.py
(+9 files in other folders)
