[project]
name = "mineral-market-tracker"
version = "0.1.0"
description = "ルース・鉱物標本の相場トラッカー"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "duckdb>=0.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "plotly>=5.18",
    "jinja2>=3.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
